@@ -1,0 +1,21 @@
+/* XPM */
+static const char * delete_xpm[] = {
+"16 16 2 1",
+" 	c none",
+".	c #000000",
+"                ",
+"                ",
+"                ",
+"  ...      ...  ",
+"   ...    ...   ",
+"    ...  ...    ",
+"     ......     ",
+"      ....      ",
+"      ....      ",
+"     ......     ",
+"    ...  ...    ",
+"   ...    ...   ",
+"  ...      ...  ",
+"                ",
+"                ",
+"                "};
